[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itk-all-repos"
dynamic = ["version"]
description = 'Propose changes across multiple ITK repositories.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matt McCormick", email = "matt.mccormick@kitware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "all-repos",
]

[project.urls]
Documentation = "https://github.com/InsightSoftwareConsortium/ITK"

[tool.hatch.version]
path = "itk_all_repos/__about__.py"
